labs/04-firewall-restricted-deployment/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  labels:
    name: argo
    lab: "04-firewall-restricted"
